Fixed spacing of links

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,11 +35,6 @@ body {
   overflow-x: hidden;
 }
 
-#budget {
-  text-align: center;
-  margin-top: 20px;
-}
-
 h1.title {
   color: #768DC1;
   font-family: 'Raleway', sans-serif;
@@ -108,6 +103,16 @@ body .content h1 {
   font-size: 2em;
 }
 
+#budget {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#budget-link {
+  display: block;
+  text-align: center;
+}
+
 .head {
   display: flex;
   flex-direction: row;
@@ -163,16 +168,6 @@ body .content h1 {
 .left-panel ul li {
   margin: 8px;
   padding: 4px;
-  background: #fff;
-}
-
-.left-panel ul li {
-  margin: 8px;
-  background: #fff;
-}
-
-.left-panel ul li {
-  margin: 8px;
   background: #fff;
 }
 
